# skills

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
agents/opencode/: dogfooder.md  playwright-writer.md
cli/src/eval/: run-probes-project-aware.ts
cli/src/lib/: chroma-store.ts  context-rules.ts  hybrid-matcher.ts
commands/: dogfood.md  write-tests.md
docs/: highlight-memory-evaluation.md  skill-suggest-layers.md
hooks/claude-code/: memory-trigger.sh  python-skill-loader.sh
hooks/opencode/: README.md  edit-block-on-escalation.mjs  edit-sequential-warning.mjs  error-solutions.json  linter-loop-escalation.mjs  schema-edit-guard.mjs  schema-write-guard.mjs  test-hooks.mjs
patches/: omo-dedup-skills.ts
plugins/asyncpg-to-sqlalchemy-converter/: .gitignore  .mcp.json  GETTING_STARTED.md  INSTALL.md  README.md  VALIDATION_REPORT.md  setup.py
plugins/asyncpg-to-sqlalchemy-converter/.claude-plugin/: plugin.json
plugins/asyncpg-to-sqlalchemy-converter/agents/: conversion-analyzer.md  schema-reflector.md
plugins/asyncpg-to-sqlalchemy-converter/commands/: convert-project.md  create-session.md  generate-models.md  validate-conversion.md
plugins/asyncpg-to-sqlalchemy-converter/examples/: usage-example.md
plugins/asyncpg-to-sqlalchemy-converter/hooks/: hooks.json
plugins/asyncpg-to-sqlalchemy-converter/scripts/: supabase-mcp-server.py  validate-sqlalchemy.sh
plugins/asyncpg-to-sqlalchemy-converter/skills/supabase-integration/: SKILL.md
quickhooks/: .gitignore  CLAUDE.md  post-task-validate.py  pyproject.toml  ruff.toml
quickhooks/.context-portal/: project.db
quickhooks/docs/: hook-testing-results.md
quickhooks/docs/development/: TYPER_TO_CYCLOPTS_MIGRATION.md
quickhooks/examples/: agent_os_demo.py  jinja_demo.py
quickhooks/hooks/: agent_analysis_hook.py  agent_os_workflow_hook.py  example_hook.py  grep_to_ripgrep.py  grep_to_ripgrep_transformer.py  intelligent_tool_dispatcher.py  intelligent_tool_selector.py  language_aware_build_checker.py  language_aware_formatter.py  language_aware_linter.py  test-hook.py
quickhooks/hooks_test/: test_hook.py
quickhooks/scripts/: agent-coordinator.py  create-hook.py  deploy.py  semver-automation.py  setup_claude_code_integration.py  setup_pep723_hooks.py  validate-build.py
quickhooks/src/quickhooks/: __init__.py  agent_discovery.py  config.py  dev.py  exceptions.py  executor.py  features.py  models.py  runner.py
quickhooks/src/quickhooks/agent_analysis/: __init__.py  agent_discovery.py  analyzer.py  command.py  context_manager.py
quickhooks/src/quickhooks/agent_os/: __init__.py  executor.py  hooks.py  instruction_parser.py  workflow_manager.py
quickhooks/src/quickhooks/claude_code/: __init__.py  manager.py  models.py
quickhooks/src/quickhooks/cli/: __init__.py  agent_os.py  agents.py  create.py  deploy.py  features.py  global_hooks.py  install.py  main.py  scaffold.py  settings.py  smart.py
quickhooks/src/quickhooks/core/: __init__.py  processor.py
quickhooks/src/quickhooks/db/: __init__.py  indexer.py  manager.py  models.py
quickhooks/src/quickhooks/hooks/: __init__.py  base.py  parallel.py
quickhooks/src/quickhooks/schema/: models.py  validator.py
quickhooks/src/quickhooks/utils/: __init__.py  jinja_utils.py
quickhooks/src/quickhooks/visualization/: mermaid_generator.py
quickhooks/templates/: cli_command.py.j2  hook_class.py.j2  smart_hook.py.j2
quickhooks/templates/hooks/: analyzer_test.py.j2  basic_hook.py.j2  basic_test.py.j2  hook_readme.md.j2  skill_integration_hook.py.j2  transformer_hook.py.j2  transformer_test.py.j2  validator_hook.py.j2  validator_test.py.j2
quickhooks/tests/: conftest.py  test_agent_analysis.py  test_ai_direct.py  test_base_hook.py  test_claude_code_compliance.py  test_cli.py  test_full_uv_workflow.py  test_grep_to_ripgrep.py  test_hook_manual.py  test_install.py  test_installation_demo.py  test_official_hook_format.py  test_runner.py  test_schema_compliance_audit.py  test_uv_install.py  test_uv_integration.py
quickhooks/tests/hooks/: test_test-hook.py
quickhooks/tests/hooks_test/: test_test_hook.py
quickhooks/tests/integration/: test_fireworks_integration.py  test_fireworks_provider.py
review-with-memory/: .env.example  .gitignore  SKILL.md  install.sh
review-with-memory/crg-bridge/: crg_with_memory.py  setup_crg_mental_models.py
review-with-memory/forecast/: forecast.py
review-with-memory/git-bridge/: advise_staged.py  install_hooks.sh  retain_commit.py
review-with-memory/graph-time-machine/: snapshot_graph.py
review-with-memory/reflect-cron/: install_launchd.sh  reflect_bank.py
review-with-memory/scripts/: backfill_conversation_tags.py  derive-tags.py  hindsight-bridge.py  start-hindsight.sh  test-local.sh
review-with-memory/skill-sync/: aggregate_project_tags.py  llm_validate.py  session_start_hook.sh  sync_project.py
review-with-memory/slash-commands/: install.sh  recall.md  remember.md
review-with-memory/test-bridge/: retain_test_failure.py
skills/eval-driven-dev/: SKILL.md
skills/eval-driven-dev/references/: ci-enforcement.md  discovery-questions.md  eval-types.md  explore-protocol.md  fuzzy-eval-rubrics.md  writing-evals.md
skills/omoios-forge/: SKILL.md
tools/posthog-manager/: README.md  config.py  posthog_client.py  posthog_manager.py
