[project]
name = "quickhooks"
version = "0.2.0"
description = "A streamlined TDD framework for Claude Code hooks with real-time feedback"
readme = "README.md"
authors = [
    { name = "Kevin Hill", email = "kivo360@gmail.com" }
]
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "cyclopts>=1.0.0",
    "pydantic>=2.5.0",
    "anyio>=4.0.0", # Async I/O library
    "watchfiles>=0.20.0", # Using watchfiles instead of watchdog
    "rich>=13.7.0", # For rich console output in CLI
    "jsonschema>=4.25.0",
    "pydantic-ai-slim[openai]>=0.0.49", # Pydantic AI with OpenAI-compatible support (for Fireworks)
    "lancedb>=0.24.2", # Vector database for agent discovery
    "fastembed>=0.2.0", # Fast embeddings without sentence-transformers
    "mermaid-py>=0.8.0",
    "pydantic-settings>=2.10.1", # For Fireworks API configuration
    "jinja2>=3.1.0", # Template engine for code generation
    "ipython>=9.4.0",
]

[project.optional-dependencies]
# Core feature groups
ai = [
    "lancedb>=0.8.0",
    "fastembed>=0.2.0",
]

search = [
    "lancedb>=0.8.0",
]

analytics = [
    "pyarrow>=12.0.0",
    "polars>=0.20.0", 
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
]

agents = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
]

scaffold = [
    "cookiecutter>=2.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.25.0",
    "websockets>=11.0.0",
]

cloud = [
    "boto3>=1.28.0",
    "azure-storage-blob>=12.17.0",
    "google-cloud-storage>=2.10.0",
    "redis>=4.6.0",
    "celery>=5.3.0",
]

enterprise = [
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "ldap3>=2.9.0",
    "prometheus-client>=0.17.0",
]

agent_os = [
    # Agent OS integration dependencies
    # Most are already included in base dependencies
    "psutil>=5.9.0",  # For system monitoring in workflows
]

performance = [
    "redis>=4.6.0",
    "aiocache>=0.12.0",
    "psutil>=5.9.0",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pre-commit>=3.0.0",
    "rich>=13.7.0",
]

# Combined groups
essential = [
    "quickhooks[ai]",
    "quickhooks[search]",
    "quickhooks[dev]",
]

pro = [
    "quickhooks[essential]",
    "quickhooks[analytics]",
    "quickhooks[scaffold]",
    "quickhooks[agents]",
    "quickhooks[agent_os]",
]

enterprise-full = [
    "quickhooks[pro]",
    "quickhooks[web]",
    "quickhooks[cloud]",
    "quickhooks[enterprise]",
    "quickhooks[performance]",
]

all = [
    "quickhooks[ai]",
    "quickhooks[search]",
    "quickhooks[analytics]",
    "quickhooks[agents]",
    "quickhooks[scaffold]",
    "quickhooks[web]",
    "quickhooks[cloud]",
    "quickhooks[enterprise]",
    "quickhooks[agent_os]",
    "quickhooks[dev]",
    "quickhooks[performance]",
]

[project.scripts]
quickhooks = "quickhooks.cli:app"
quickhooks-dev = "quickhooks.dev:main"  # Development server with hot reload

[dependency-groups]
# Development dependencies following PEP 735
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "cyclopts>=1.0.0",
    "pre-commit>=3.0.0",
    "rich>=13.7.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "toml>=0.10.0",  # For semver automation
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# Include dev dependencies by default
default-groups = ["dev"]

# Optional: UV build backend configuration for advanced use cases
# [tool.uv.build-backend]
# module-name = "quickhooks"
# source-include = ["src/**", "README.md", "LICENSE"]
# source-exclude = ["tests/**", "*.pyc"]

[tool.uv.sources]
# Pin to specific versions for reproducible builds

# MyPy configuration (strict for Typer compatibility)
[tool.mypy]
python_version = "3.12"
# Strict type checking
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
# Additional strict settings for Typer
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_unimported = true
# Enable all optional error checks
enable_error_code = [
    "ignore-without-code",
    "redundant-cast",
    "unused-awaitable",
    "explicit-override",
    "truthy-bool",
    "unused-ignore",
    "no-any-return",
    "no-any-unimported",
    "no-untyped-def",
]
# Strict module rules
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
strict_optional = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=quickhooks",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
